exam report 00/3-0-ft_atoi_base.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r8p21.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Apr 30 12:59:46 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190430/lusanche

= Git history ==================================================================
$> git -C /var/folders/4h/34yst3g12ts6lhwspf0fqhqm0000gp/T/tmp9xZjq5/user log --pretty='%H - %an, %ad : %s'
aa0ea27e3653465eb2cbff97b21f8846bcb36302 - Exam 42, Tue Apr 30 12:59:33 2019 -0700 : creation of ft_atoi_base
add46605a61cbf2f509acb7407454b94bfeb38ad - Exam 42, Tue Apr 30 11:40:27 2019 -0700 : creation of print_bits
983b9fc221e00292c70cc90851fac597c363c3a6 - Exam 42, Tue Apr 30 10:19:20 2019 -0700 : creation of ft_strlen
ffa198b29b0a0f38d404ea3dd71e33824efe0f8b - Exam 42, Tue Apr 30 09:48:12 2019 -0700 : creation of ft_print_numbers
 
= Collected files ==========================================
$> ls -lAR /var/folders/4h/34yst3g12ts6lhwspf0fqhqm0000gp/T/tmp9xZjq5/user
total 8
-rw-r--r--  1 deepthought  deepthought  1035 Apr 30 12:59 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Apr 30 12:59 ft_atoi_base
drwxr-xr-x  3 deepthought  deepthought   102 Apr 30 12:59 ft_print_numbers
drwxr-xr-x  3 deepthought  deepthought   102 Apr 30 12:59 ft_strlen
drwxr-xr-x  3 deepthought  deepthought   102 Apr 30 12:59 print_bits

/var/folders/4h/34yst3g12ts6lhwspf0fqhqm0000gp/T/tmp9xZjq5/user/ft_atoi_base:
total 8
-rw-r--r--  1 deepthought  deepthought  1844 Apr 30 12:59 ft_atoi_base.c

/var/folders/4h/34yst3g12ts6lhwspf0fqhqm0000gp/T/tmp9xZjq5/user/ft_print_numbers:
total 8
-rw-r--r--  1 deepthought  deepthought  974 Apr 30 12:59 ft_print_numbers.c

/var/folders/4h/34yst3g12ts6lhwspf0fqhqm0000gp/T/tmp9xZjq5/user/ft_strlen:
total 8
-rw-r--r--  1 deepthought  deepthought  989 Apr 30 12:59 ft_strlen.c

/var/folders/4h/34yst3g12ts6lhwspf0fqhqm0000gp/T/tmp9xZjq5/user/print_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1711 Apr 30 12:59 print_bits.c
 
= ft_atoi_base =================================================================
$> gcc -Wextra -Wall -Werror ft_atoi_base.c main.c -o user_exe 
ft_atoi_base.c:24:24: error: '&&' within '||' [-Werror,-Wlogical-op-parentheses]
        while (!(str[i] >= 48 && str[i] <= 57 || str[i] >= 97 && str[i] <= 102 || str[i] >= 65 && str[i] <= 70)) 
                 ~~~~~~~~~~~~~^~~~~~~~~~~~~~~ ~~
ft_atoi_base.c:24:24: note: place parentheses around the '&&' expression to silence this warning
        while (!(str[i] >= 48 && str[i] <= 57 || str[i] >= 97 && str[i] <= 102 || str[i] >= 65 && str[i] <= 70)) 
                              ^
                 (                           )
ft_atoi_base.c:24:56: error: '&&' within '||' [-Werror,-Wlogical-op-parentheses]
        while (!(str[i] >= 48 && str[i] <= 57 || str[i] >= 97 && str[i] <= 102 || str[i] >= 65 && str[i] <= 70)) 
                                              ~~ ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
ft_atoi_base.c:24:56: note: place parentheses around the '&&' expression to silence this warning
        while (!(str[i] >= 48 && str[i] <= 57 || str[i] >= 97 && str[i] <= 102 || str[i] >= 65 && str[i] <= 70)) 
                                                              ^
                                                 (                            )
ft_atoi_base.c:24:89: error: '&&' within '||' [-Werror,-Wlogical-op-parentheses]
        while (!(str[i] >= 48 && str[i] <= 57 || str[i] >= 97 && str[i] <= 102 || str[i] >= 65 && str[i] <= 70)) 
                                                                               ~~ ~~~~~~~~~~~~~^~~~~~~~~~~~~~~
ft_atoi_base.c:24:89: note: place parentheses around the '&&' expression to silence this warning
        while (!(str[i] >= 48 && str[i] <= 57 || str[i] >= 97 && str[i] <= 102 || str[i] >= 65 && str[i] <= 70)) 
                                                                                               ^
                                                                                  (                           )
ft_atoi_base.c:28:13: error: expected ';' after expression
                        sign = -1
                                 ^
                                 ;
ft_atoi_base.c:32:2: error: expected expression
        else 
        ^
ft_atoi_base.c:13:40: error: unused parameter 'str_base' [-Werror,-Wunused-parameter]
int             ft_atoi_base(const char *str, int str_base)
                                                  ^
6 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
